--- a/background.html
+++ b/background.html
@@ -56,7 +56,7 @@
                 <ul>
                     <li><a href="https://github.com/HerocraftYT23/First-timer" target="_blank">First Project</a></li>
                     <li><a href="https://www.figma.com/proto/vkJtfRPzCYDEmrUzck6PMz/Web-SaJak?node-id=3-2&p=f&t=WQpLLEKlr8yORQ01-0&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=3%3A2" target="_blank">Second project</a></li>
-                    <li><a href="https://example.com/project3" target="_blank">Project 3</a></li>
+                    <li><a href="https://github.com/HerocraftYT23/First-Portofolio" target="_blank">Third Project</a></li>
                 </ul>
             </main>
         </div>
