changed footer name

--- a/background.html
+++ b/background.html
@@ -62,11 +62,8 @@
         </div>
         <footer id="contact-section">
             <h2>Contact</h2>
-            <p>Interested in connecting with me?</p>
-            <form>
-                <input type="email" placeholder="e-mail here" required />
-                <input type="submit" value="Sign Up" />
-            </form>
+            <h3>Interested in connecting with me?</h3>
+            <p>Email me!<br>rafajuliansyah@gmail.com</p>
         </footer>
     </body>
 </html>
